feat: Add build cmd

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "postinstall": "umi g tmp",
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "umi build",
     "deploy": "npm run site && npm run gh-pages",
     "docker-hub:build": "docker build  -f Dockerfile.hub -t  ant-design-pro ./",
     "docker-prod:build": "docker-compose -f ./docker/docker-compose.yml build",
@@ -30,10 +29,14 @@
     "start": "umi dev",
     "dev": "npm run start:dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none umi dev",
+    "start:pro": "cross-env REACT_APP_ENV=pro MOCK=none umi dev",
     "start:no-mock": "cross-env MOCK=none umi dev",
     "start:no-ui": "cross-env UMI_UI=none umi dev",
     "start:pre": "cross-env REACT_APP_ENV=pre umi dev",
     "start:test": "cross-env REACT_APP_ENV=test MOCK=none umi dev",
+    "build:dev": "cross-env REACT_APP_ENV=development umi build",
+    "build:pre": "cross-env REACT_APP_ENV=preview umi build",
+    "build:prod": "cross-env REACT_APP_ENV=production umi build",
     "pretest": "node ./tests/beforeTest",
     "test": "umi test",
     "test:all": "node ./tests/run-tests.js",
