--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "start": "umi dev",
     "dev": "npm run start:dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none umi dev",
-    "start:pro": "cross-env REACT_APP_ENV=pro MOCK=none umi dev",
+    "start:prod": "cross-env REACT_APP_ENV=prod MOCK=none umi dev",
+    "start:design": "cross-env REACT_APP_ENV=design MOCK=none umi dev",
     "start:no-mock": "cross-env MOCK=none umi dev",
     "start:no-ui": "cross-env UMI_UI=none umi dev",
     "start:pre": "cross-env REACT_APP_ENV=pre umi dev",
-    "start:test": "cross-env REACT_APP_ENV=test MOCK=none umi dev",
     "build:dev": "cross-env REACT_APP_ENV=development umi build",
     "build:pre": "cross-env REACT_APP_ENV=preview umi build",
     "build:prod": "cross-env REACT_APP_ENV=production umi build",
